openapi: javadoc
- working in progress of adding javadoc to openapi
- still a lot to do